创建model层表单数据
